<resources>
    <string name="app_name">InventoryApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="product_currency">EUR</string>
    <string name="product_qty_lbl">Qty:</string>
    <string name="buy_btn_lbl">Sale</string>
    <string name="empty_db_msg">There are no products in the database</string>
    <string name="qty_neg_err">There are no more products to sell please contact a sales person</string>
    <string name="prod_name_lbl">Name *</string>
    <string name="prod_qty_lbl">Quantity *</string>
    <string name="prod_price_lbl">Price *</string>
    <string name="prod_supplier_name_lbl">Sup.Name</string>
    <string name="prod_supplier_phone_lbl">Sup.Phone</string>
    <string name="prod_call_supp_btn_txt">Call Supplier</string>
    <string name="prod_delete_btn_txt">Delete prod.</string>
    <string name="prod_sell_ok">Product sold !</string>
    <string name="prod_edit_title">Edit Product</string>
    <string name="prod_create_title">Create Product</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_message">Are you sure you want to delete ?</string>
    <string name="delete">Delete</string>
    <string name="prod_del_err">OOPS, something bad happened</string>
    <string name="prod_del_succ">Product deleted !</string>
    <string name="prod_save_btn_txt">Save</string>
    <string name="back_confirm_msg">You have unsaved changes, are you sure you want to go back ?</string>
    <string name="back_yes">Yes</string>
    <string name="back_no">No</string>
    <string name="err_no_call_perm">Please provide call permission</string>
    <string name="err_empty_req_fields">Please make sure that the required fields are filled</string>
    <string name="prod_save_succ">Product succesfully saved</string>
    <string name="err_save">There was an error saving the product</string>
    <string name="err_num_fields_negative">Please make sure that all numeric fields are grater than 0</string>
</resources>
